Remove obsolete debugging logs

--- a/delta-debugger/cppython/delta_debugger_main.ipynb
+++ b/delta-debugger/cppython/delta_debugger_main.ipynb
@@ -102,17 +102,13 @@
     "            dd_test_timeout\n",
     "            ])\n",
     "\n",
-    "  # print(\"DEBUGGGING - VELVET RUN COMPLETE\")\n",
-    "\n",
     "  # read velvet report\n",
     "  dd_temp_velvet_report_path = sharpvelvet_path + \"out/dd-temp_fuzz-results.csv\"\n",
     "  dd_test_report = pd.read_csv(dd_temp_velvet_report_path)\n",
     "\n",
-    "  # print (\"DENBUG = CSV READ\")\n",
-    "\n",
-    "  print(\"[DeltaD] Velvet report:\")\n",
+    "  print(\"c o [DeltaD] Velvet report:\")\n",
     "  print(dd_test_report)\n",
-    "  print(\"[DeltaD] End Velvet report\")\n",
+    "  print(\"c o [DeltaD] End Velvet report\")\n",
     "\n",
     "  n_counters = dd_test_report.shape[0]\n",
     "\n",
@@ -123,8 +119,6 @@
     "    majority_threshold = (n_counters + 1) / 2\n",
     "\n",
     "  counts_array = np.zeros(n_counters, dtype=object)\n",
-    "\n",
-    "  # print(f'WE HAVE {n_counters} solvers, array {counts_array}')\n",
     "\n",
     "  # check if it triggered a bug in tested solver\n",
     "  dd_test_result = False\n",
@@ -152,16 +146,9 @@
     "    else:\n",
     "      print(f'c o [DeltaD] - No agreement in majority vote')\n",
     "\n",
-    "\n",
-    "  # print(f'WE HAVE {dd_test_report.shape[0]} solvers, FULL array {counts_array}')\n",
-    "\n",
     "  return dd_test_result\n",
     "\n",
     "def delta_debugg(instance, probdd_heuristic = 2):\n",
-    "  # with open(dd_result_logs, \"a\") as logs_file:\n",
-    "  #   dd_msg = \"Start delta debugging counter \" + str(debugged_counter) + \" Heuristic \" + str(probdd_heuristic)\n",
-    "  #   print(dd_msg, file=logs_file)\n",
-    "\n",
     "  # ==== Init delta debugger\n",
     "  dd_obj = deltad_lib.PyDeltaDebugger()\n",
     "  dd_obj.init_dd()\n",
@@ -178,15 +165,15 @@
     "  dd_obj.print_cnf(output_path_cpp_string)\n",
     "\n",
     "  # call velvet on preprocessed cnf\n",
-    "  print (\"Starting preprocessed run\")\n",
+    "  print (\"c o [DeltaD] Fuzzing preprocessed CNF\")\n",
     "  preprocessed_cnf_bug = velvet_test_cnf()\n",
     "\n",
     "  if preprocessed_cnf_bug == False:\n",
     "    # no bug triggered, return original, preprocessed pair\n",
-    "    print('[DeltaD] Finished! Bug not present in preprocessed CNF - reporting (original CNF, preprocessed CNF).')\n",
+    "    print('c o [DeltaD] Finished! Bug not present in preprocessed CNF - reporting (original CNF, preprocessed CNF).')\n",
     "    return\n",
     "\n",
-    "  print(\"[DeltaD] BUG still present in preprocessed CNF - continuing to ProbDD\")\n",
+    "  print(\"c o [DeltaD] BUG still present in preprocessed CNF - continuing to ProbDD\")\n",
     "  # ====\n",
     "\n",
     "  # ==== ProbDD \n",
@@ -197,8 +184,6 @@
     "  log_path_cpp_string = cppython.declare(string, dd_result_logs.encode('UTF-8'))\n",
     "  counter_name_cpp_string = cppython.declare(string, debugged_counter.encode('UTF-8'))\n",
     "  dd_obj.init_probdd(probdd_heuristic, log_path_cpp_string, counter_name_cpp_string)\n",
-    "\n",
-    "  # print (\"DONE INITI PROBdd \")\n",
     "\n",
     "  # prob dd assumes there is at least 1 clause in reduced cnf\n",
     "  while dd_obj.finished() == False:\n",
@@ -212,11 +197,6 @@
     "  reduced_cnf_path_cpp_string = cppython.declare(string, reduced_cnf_path.encode('UTF-8'))\n",
     "  dd_obj.print_final_cnf(reduced_cnf_path_cpp_string)\n",
     "  \n",
-    "\n",
-    "  # with open(dd_result_logs, \"a\") as logs_file:\n",
-    "  #   dd_msg = \"DONE delta debugging counter \" + str(debugged_counter) + \" Heuristic \" + str(probdd_heuristic)\n",
-    "  #   print(dd_msg, file=logs_file)\n",
-    "\n",
     "  # ====\n",
     "\n",
     "# experiments all heuristics\n",
@@ -229,12 +209,12 @@
     "# velvet report\n",
     "cnfs = pd.read_csv(initial_report_path)\n",
     "\n",
-    "print(\"python Enter dd main\")\n",
+    "print(\"c o [DeltaD] Initializing DeltaMC...\")\n",
     "\n",
     "for instance in cnfs.itertuples(index=False):\n",
     "  # Checks whether this instance timed out\n",
     "  if instance.timed_out:\n",
-    "    print(f'Time out on {instance.instance}!')\n",
+    "    print(f'c o [DeltaD] Time out on {instance.instance}!')\n",
     "    # delta_debugg(instance)\n",
     "    delta_debugg_all_heuristics(instance)\n",
     "# ====\n",
